--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,6 @@
 deploy.ant.properties.file=C:\\Users\\cunpl\\AppData\\Roaming\\NetBeans\\12.3\\tomcat90.properties
+file.reference.activation.jar=D:\\Source Code\\Java Programing\\Lab_Web\\SimpleBlog\\Mail\\activation.jar
+file.reference.mail.jar=D:\\Source Code\\Java Programing\\Lab_Web\\SimpleBlog\\Mail\\mail.jar
 j2ee.server.home=D:/Download/Netbean_8.2/apache-tomcat-9.0.52
 j2ee.server.instance=tomcat90:home=D:\\Download\\Netbean_8.2\\apache-tomcat-9.0.52
 user.properties.file=C:\\Users\\cunpl\\AppData\\Roaming\\NetBeans\\12.3\\build.properties
